# picture-date-changer

./: ReadMe.md  check_versions.py  dev.sh  greet.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: cd.yml
exif-lab/: ReadMe.md  main.js
host/: Cargo.toml  generate_bindings.py  tauri.conf.json
host/src/: handle_message_to_host.rs  host_ui_bridge.rs  load_media.rs  main.rs  media_datetime.rs
image-dates/: ReadMe.md
picdates/: ReadMe.md  client-labels.js  date-from-file.js  date-from-file.mjs  dates-from-file.js  dates-from-file.mjs  dates.js  humanize.js  humanize.mjs  labels_client.js  main.js  output.json  output.md
picdates/test/: client-labels.mjs  main.mjs  output.md
picdates/test-data/: client-labels.js  main.js  main.mjs  output.md
src/: main.ts
src-tauri/: Cargo.toml  generate-bindings.sh  tauri.conf.json
src-tauri/bindings/: ToHostMessage.ts  ToUiMessage.ts
src-tauri/src/: host_ui_bridge.rs  main.rs
src-ui/: package-lock.json  package.json  vite.config.ts
src-ui/src/: App.tsx  main.tsx
src/common/: Day.ts  Image.ts  MediaFile.ts  PictureDateChangerAPI.d.ts  arrays.ts
src/electron/: IpcApi.ts  file-type.cjs  filePaths.ts  loadMedia.ts  main.ts  picdates.cjs  preload.ts  tsconfig.json  uiIpc.ts
src/main-window/: Days.ts  ImageGrid.tsx  PictureDateChanger.tsx  imageGrid.css  imageGrid.tsx  index.html  index.scss  main.tsx  organizeMediaByDate.ts  uiIpc.ts
ui/: .gitignore  package-lock.json  package.json  vite.config.ts
ui/src/: MediaFile.ts  PictureDateChanger.tsx  dateTime.ts  (+4 more)
(+14 files in other folders)
