[package]
name = "picture-date-changer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog", "shell-open"] }
rexiv2 = "0.10.0"
ts-rs = "6.2"
tsync = "1.6.1"
walkdir = "2.3.2"
mime = "0.3.16"
mime_guess = "2.0.4"
futures = "0.3.25"
tokio = { version = "1.24.2", features = ["macros", "fs", "time"] }
base64 = "0.21.0"
regex = "1.7.1"
lazy_static = "1.4.0"
chrono = "0.4.23"
magick_rust = "0.17.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
